<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".ui.timeRegistration.TimeRegistrationFragment">

<androidx.constraintlayout.widget.ConstraintLayout
android:layout_width="match_parent"
android:layout_height="wrap_content">
    <Chronometer
        android:id="@+id/chronometer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@id/tags"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingBottom="20dp"
        />

<EditText
    android:id="@+id/tags"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/tagsText"
    android:textSize="20sp"
    android:layout_marginTop="50dp"
    app:layout_constraintBottom_toTopOf="@+id/task" />



<EditText
    android:id="@+id/task"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/taskText"
    android:textSize="20sp"
    android:layout_marginTop="50dp"
    app:layout_constraintBottom_toTopOf="@+id/date"
    />

<EditText
    android:id="@+id/date"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/dateText"
    android:textSize="20sp"
    android:layout_marginTop="50dp"
    app:layout_constraintTop_toBottomOf="@id/task"
    />



    <EditText
        android:id="@+id/project"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/projectText"
        android:textSize="20sp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/date"
        app:layout_constraintBottom_toTopOf="@id/save"/>
    <Button
        android:id="@+id/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green"
        android:text="Save"
        android:theme="@style/Button.green"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
      />

</androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>