<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.start.login.ResetPasswordFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">

        <EditText
            android:id="@+id/passwordText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/passwordText"
            app:layout_constraintBottom_toTopOf="@id/passwordText"
            app:layout_constraintTop_toTopOf="parent"/>

       <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirmText"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/next"
        app:layout_constraintTop_toBottomOf="@id/passwordText" />

        <Button
            android:id="@+id/next"
            android:layout_width="match_parent"
            android:textSize="20sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/green"
            android:text="@string/continueBtn"
            android:theme="@style/Button.green"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/confirmPassword" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>