<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/blue"
    tools:context=".ui.dashboard.DashboardFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        android:layout_centerVertical="true"
        android:layout_gravity="center">

        <Button
            android:id="@+id/quickBtn"
            android:layout_width="0dp"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_percent="0.7"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:backgroundTint="@color/green"
            android:padding="40dp"
            android:text="@string/quickBtn"
            android:paddingTop="0dp"
            android:textAlignment="center"
            android:theme="@style/Button.green"
            app:layout_constraintBottom_toTopOf="@id/withoutTimer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/withoutTimer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_percent="0.7"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:backgroundTint="@color/green"
            android:padding="40dp"
            android:layout_marginTop="50dp"
            android:text="@string/withoutBtn"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:theme="@style/Button.green"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/startDate"
            app:layout_constraintTop_toBottomOf="@+id/quickBtn" />

        <Button
            android:id="@+id/startDate"
            android:textColor="@color/white"
            android:layout_width="0dp"
            app:layout_constraintWidth_percent="0.7"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:backgroundTint="@color/green"
            android:padding="40dp"
            android:layout_marginTop="50dp"
            android:text="@string/startTimeBtn"
            android:textAlignment="center"
            android:theme="@style/Button.green"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/withoutTimer" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>