<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:menu="@menu/bottom_nav_menu"
    app:startDestination="@id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.myapplication.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" >
        <action
            android:id="@+id/action_navigation_dashboard_to_withoutTimerFragment"
            app:destination="@id/withoutTimerFragment" />
        <action
            android:id="@+id/action_navigation_dashboard_to_timeRegistrationFragment"
            app:destination="@id/timeRegistrationFragment" />
        <action
            android:id="@+id/action_navigation_dashboard_to_quickStartFragment"
            app:destination="@id/quickStartFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_project"
        android:name="com.example.myapplication.ui.projects.ProjectsFragment"
        android:label="@string/title_project"
        tools:layout="@layout/fragment_projects" >
        <action
            android:id="@+id/action_navigation_project_to_detailsProject"
            app:destination="@id/detailsProject" />
        <action
            android:id="@+id/action_navigation_project_to_addProject"
            app:destination="@id/addProject" />
    </fragment>

    <fragment
        android:id="@+id/navigation_time"
        android:name="com.example.myapplication.ui.timeRegistration.AllTimeRegistrationsFragment"
        android:label="@string/title_time"
        tools:layout="@layout/fragment_time_registration" >
        <action
            android:id="@+id/action_navigation_time_to_detailsTimeRegist"
            app:destination="@id/detailsTimeRegist" />
        <action
            android:id="@+id/action_navigation_time_to_addProject"
            app:destination="@id/addProject" />
    </fragment>

    <fragment
        android:id="@+id/navigation_date"
        android:name="com.example.myapplication.ui.calendar.CalendarFragment"
        android:label="Calendar"
        tools:layout="@layout/fragment_calendar" />
    <fragment
        android:id="@+id/withoutTimerFragment"
        android:name="com.example.myapplication.ui.dashboard.WithoutTimerFragment"
        android:label="fragment_without_timer"
        tools:layout="@layout/fragment_without_timer" />
    <fragment
        android:id="@+id/timeRegistrationFragment"
        android:name="com.example.myapplication.ui.timeRegistration.TimeRegistrationFragment"
        android:label="fragment_time_registration"
        tools:layout="@layout/fragment_time_registration" />
    <fragment
        android:id="@+id/quickStartFragment"
        android:name="com.example.myapplication.ui.dashboard.QuickStartFragment"
        android:label="fragment_quick_start"
        tools:layout="@layout/fragment_quick_start" />
    <fragment
        android:id="@+id/detailsTimeRegist"
        android:name="com.example.myapplication.DetailsTimeRegist"
        android:label="fragment_details_time_regist"
        tools:layout="@layout/fragment_details_time_regist" />
    <fragment
        android:id="@+id/detailsProject"
        android:name="com.example.myapplication.DetailsProject"
        android:label="fragment_details_project"
        tools:layout="@layout/fragment_details_project" />
    <fragment
        android:id="@+id/addProject"
        android:name="com.example.myapplication.AddProject"
        android:label="fragment_add_project"
        tools:layout="@layout/fragment_add_project" />
</navigation>